# HSLU.AICOMP.HMS

./: .darglint  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  WandDB Guideline.md  pyproject.toml  requirements.txt
experiments/: results.json
notebooks/: 01-explorative-data-analysis.ipynb  01_exploration_maiko.ipynb  01_explorative_data_analysis.ipynb  01_explorative_data_analysis_maiko.ipynb  02_1_spectrogram_data_preparation.ipynb  02_data_preparation.ipynb  02_eeg_data_preparation.ipynb  03_cnn_model.ipynb  03_create_folds.ipynb  04_baselines.ipynb  04_create_eeg_spectrograms.ipynb  05_xgboost.ipynb  notebook_setup.py
notebooks/_archive/: create_eeg_spectrograms.ipynb  create_folds.ipynb  data_preparation.ipynb
notebooks/visualizations/: explore_timm_models.ipynb  kaggle-leaderboard.json  leaderboard_ranking.ipynb  readme.md  visualize_cnn_backbone_results.ipynb  visualize_folds.ipynb  visualize_kl_divergence.ipynb  visualize_mixup.ipynb  visualize_results.ipynb
scripts/: 01_download.py  02_create_eeg_spectrograms.py  02_preprocess_eeg_data.py  03_cnn_architecture_probing.py  03_create_eeg_spectrograms.py  03_test_model_gpu.py  04_cnn_architecture_probing.py  04_multi_spec_cnn_architecture_probing.py  05_multi_spec_cnn_architecture_probing.py  eeg_processor.py  execute_cnn_architecture_probing.sh  train_cnn_models.sh
scripts/_archive/: cnn_architecture_probing.py  execute_cnn_architecture_probing.sh
scripts/kaggle/: kaggle_utils.py  readme.md  upload_models_to_kaggle.py  (+2 more)
src/models/: gru.py  (+6 more)
(+70 files in other folders)
