[project]
name = "HMS - Harmful Brain Activity Classification"
description = "Project for the AICOMP module running in HS25 at HSLU"
version = "0.1.0"
authors = [
    {name = "David Hodel", email = "david.hodel@stud.hslu.ch"},
    {name = "Maiko Trede", email = "maiko.trede@stud.hslu.ch"},
]

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_gitignore=true
py_version=39
default_section = "THIRDPARTY"
known_thirdparty=["wandb"]

[tool.pytest.ini_options]
# Set true to see logger ouput in test command line window
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(time)s :: %(name)s :: %(message)s"
